<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/app_toolbar"
        android:id="@+id/employeesToolbar"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/employeesToolbar"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employeesDropdown"
            app:layout_constraintWidth_percent="0.8"
            android:prompt="@string/selectEmployees"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:background="@color/lightGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/monthDropdown"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:prompt="@string/month"
            android:background="@color/lightGrey"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employeesDropdown"
            >
        </Spinner>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/yearDropdown"
            android:prompt="@string/year"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:layout_marginLeft="5dp"
            android:background="@color/lightGrey"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employeesDropdown"
            >
        </Spinner>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reportButton"
            android:text="@string/viewReport"
            android:padding="18dp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthDropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>