<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/app_toolbar"
        android:id="@+id/attendanceDetailsToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportText"
        android:text="@string/reportText"
        android:textColor="@color/textBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendanceDetailsToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/attendanceHeadingConstraint"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/reportText"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateOfMonthHeading"
            android:padding="8dp"
            android:text="@string/dateOfTheMonth"
            android:background="@color/darkGrey"
            android:textColor="@color/textWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hoursLoggedHeading"
            android:padding="8dp"
            android:text="@string/hoursLogged"
            android:background="@color/darkGrey"
            android:textColor="@color/textWhite"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintStart_toEndOf="@id/dateOfMonthHeading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/attendanceDetailsRecycler"
            app:layout_constraintTop_toBottomOf="@id/dateOfMonthHeading"
            app:layout_constraintStart_toStartOf="parent"
            >

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loggedHoursTable"
        android:stretchColumns="0,1,2"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TableRow >

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/hoursLoggedTitle"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/hoursLogged"
                android:background="@color/darkGrey"
                android:textColor="@color/textWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/daysPresentTitle"
                android:gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:padding="8dp"
                android:layout_marginTop="1dp"
                android:text="@string/daysPresent"
                android:background="@color/darkGrey"
                android:textColor="@color/textWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/daysAbsentTitle"
                android:gravity="center_horizontal"
                android:text="@string/daysAbsent"
                android:padding="8dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/darkGrey"
                android:textColor="@color/textWhite"
                android:textSize="18sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/hoursLogged"
                android:gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/hours"
                android:padding="8dp"
                android:background="@color/lightGrey"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/daysPresent"
                android:gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:padding="8dp"
                android:text="@string/daysPresent"
                android:background="@color/lightGrey"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/daysAbsent"
                android:gravity="center_horizontal"
                android:text="@string/daysAbsent"
                android:padding="8dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/lightGrey"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>